[tool.poetry]
name = "ccf-website-backend"
version = "0.1.0"
description = ""
authors = ["Jinbo ZHANG <cszhangjinbo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
Flask = "^1.1.2"
Flask-RESTful = "^0.3.8"
fastapi-versioning = "^0.8.0"
Flask-Cors = "^3.0.10"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
